# fOS

./: README.md
Crowpanel_7"_esp32s3/example app/: README.txt
Crowpanel_7"_esp32s3/fOS1.0/: CMakeLists.txt  README.md  fOS1.0.ino  filelist.txt  ui.c  ui.h  ui_AppContent.c  ui_AppContent.h  ui_ScreenAppLauncher.c  ui_ScreenAppLauncher.h  ui_ScreenCalculator.c  ui_ScreenCalculator.h  ui_ScreenClock.c  ui_ScreenClock.h  ui_ScreenFileManager.c  ui_ScreenFileManager.h  ui_ScreenHome.c  ui_ScreenHome.h  ui_ScreenRadio.c  ui_ScreenRadio.h  ui_ScreenSettings.c  ui_ScreenSettings.h  ui_ScreenSettingsSystemInfo.h  ui_ScreenText.c  ui_ScreenText.h  ui_ScreenWeather.c  ui_ScreenWeather.h  ui_ScreenWeb.c  ui_comp.c  ui_comp.h  ui_comp_button1.c  ui_comp_button1.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_switch.c  (+15 more)
Crowpanel_7"_esp32s3/fOS1.0_ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_NoFunktion.c  ui_NoFunktion.h  ui_ScreenAppLauncher.c  ui_ScreenAppLauncher.h  ui_ScreenCalculator.c  ui_ScreenCalculator.h  ui_ScreenClock.c  ui_ScreenClock.h  ui_ScreenFileManager.c  ui_ScreenFileManager.h  ui_ScreenHome.c  ui_ScreenHome.h  ui_ScreenRadio.c  ui_ScreenRadio.h  ui_ScreenSettings.c  ui_ScreenSettings.h  ui_ScreenSettingsSystemInfo.c  ui_ScreenSettingsSystemInfo.h  ui_ScreenText.c  ui_ScreenText.h  ui_ScreenWeather.c  ui_ScreenWeather.h  ui_ScreenWeb.c  ui_ScreenWeb.h  ui_comp_button1.c  ui_comp_button1.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_switch.h  ui_events.c  ui_events.h  ui_helpers.c  ui_img_1607212695.c  ui_img_2114985472.c  ui_img_294430296.c  ui_img_folder_png.c  (+1 more)
(+64 files in other folders)
